feat: add ServiceLength fix: fix Project Length Enums chore: refactor database to the public package usage fix: fix some endpoint statuses feat: update service migration feat: update create service query feat: add auth/register feat: add auth tests feat: add service tests docs: add service docs
